--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "node server.js",
-    "start-dev": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -37,5 +36,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"https://filefly-download.herokuapp.com/"
+  "proxy":"http://localhost:5000"
 }
